2.1.1
  Changelog:
    - Added an option to callback on dismount

2.1
  Changelog:
    - 1.18 support
    - Applied a workaround to fix passengers visual bugs
    - Fixed fuel file creation

2.0.9
  Changelog:
    - Added WorldGuard and Towny support
    - Fixed gui bugs
    - Fixed spawned vehicle load after restart
    - Updated texture
    - Updated dependencies
    - Fixed economy support
    - Fixed fuel lore color
    - Now keeping vehicles away from world height limit

2.0.8
  Changelog:
    - Fixed forks support
    - Added some new translations
    - Fixed boats

2.0.7
  Changelog:
    - Fixed "spawnVehicle command cause wrong vehicle controls"
    - Fixed sirens
    - Fixed Fuel GUI
    - Fixed speed issues
    - Fixed shop errors
    - Added removeVehicle command
    - Now you can bypass fuel in creative mode
    - Now you can make damaged vehicles stop moving

2.0.6
  Changelog:
    - Fixed VehicleSpawnEvent
    - Fixed spawnVehicle method
    - Added an expiring material map to prevent lag.
    - Various optimizations
    - Fixed entity deconstruct
    - Fixed passengers
    - Added metrics from bStats
    - Fixed "Helicopter still flying when no-one is driving."
    - Added the ability to change the plugin prefix

2.0.5.1
  Changelog:
    - Fixed lag and tps drops
    - Fixed legacy file creation (Now 1.12.2< works without any edit)
  Updating:
    If you are running 1.12.2< you can enable default file creation (Enable_Creation_Of_Default_Files) in the config
    and delete the default vehicles files (if you don't have any custom vehicle just delete the vehicles and items' folder)
    QualityArmoryVehicles2 will recreate them for your server version.

2.0.5
  Changelog:
    - Removed AntiFlyKickEvent
    - Fixed passenger seats
    - Moved CustomItemManager to the main package to prevent conflicts
  Contributors:
    - Lorenzo0111

2.0.4.2
  Changelog:
    - Fix multiworld support
    - Fix passengers can drive
  Contributors:
    - Lorenzo0111
