@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmoryVehicles</artifactId>
-    <version>2.1</version>
+    <version>2.1.1-SNAPSHOT</version>
 
     <repositories>
         <repository>
