@@ -97,6 +97,7 @@ public class Main extends JavaPlugin {
 	public static boolean freezeOnDestroy = false;
 	public static boolean bypassCoalInCreative = true;
 	public static boolean sendActionBarOnMove = true;
+	public static boolean enableShopCooldown = false;
 	public static boolean disableing = false;
 	public static boolean enable_RequirePermToBuyVehicle = false;
 	public static Object BOUNDINGBOX;
@@ -391,6 +392,7 @@ public class Main extends JavaPlugin {
 		freezeOnDestroy = (boolean) a("freezeOnDestroy", freezeOnDestroy);
 		bypassCoalInCreative = (boolean) a("bypassCoalInCreative", bypassCoalInCreative);
 		sendActionBarOnMove = (boolean) a("sendActionBarOnMove", sendActionBarOnMove);
+		enableShopCooldown = (boolean) a("enableShopCooldown", enableShopCooldown);
 
 		enable_RequirePermToBuyVehicle = (boolean) a("enable_RequirePermToBuyVehicle", enable_RequirePermToBuyVehicle);
 
